--- a/parts/header.html
+++ b/parts/header.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper">
         <div class="content">
-            <header class="header header_dark">
+            <header class="header header_@@theme">
                 <div class="container">
                     <div class="row">
                         <div class="header__col header__col_logo">
@@ -58,40 +58,3 @@
                     </div>
                 </div>
             </header>
-;
-<section class="registr-main">
-    <div class="container">
-        <div class="row">
-            <h2 class="registr-main__title title title_bold title_dark">
-                Регистрация
-            </h2>
-        </div>
-        <div class="row">
-            <form action="#" class="email-form">
-                <input type="text" class="email-form__input input" placeholder="E-mail">
-                <button type="submit" class="email-form__btn btn btn_dark">ЗАРЕГИСТРИРОВАТЬСЯ</button>
-            </form>
-        </div>
-    </div>
-</section>
-</div>
-<footer class="footer">
-    <div class="container">
-        <div class="row">
-            <nav class="footer__menu">
-                <ul class='footer-menu__list'>
-                    <li class='footer-menu__item'><a href='#' class='footer-menu__link'>Политика конфиденциальности</a></li>
-                    <li class='footer-menu__item'><a href='#' class='footer-menu__link'>Обработка персональных данных</a></li>
-                    <li class='footer-menu__item'><a href='#' class='footer-menu__link'>Оферта</a></li>
-                    <li class='footer-menu__item'><a href='#' class='footer-menu__link'>Тарифы</a></li>
-                    <li class='footer-menu__item'><a href='#' class='footer-menu__link'>Отменить подписку</a></li>
-                </ul>
-            </nav>
-        </div>
-    </div>
-</footer>
-</div>
-<script src="JS/bundle.js"></script>
-</body>
-
-</html>
