--- a/parts/rep-page.html
+++ b/parts/rep-page.html
@@ -1,65 +1,3 @@
-<!DOCTYPE html>
-<html lang="ru">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Auto | Development Version</title>
-    <link rel="stylesheet" href="css/style.min.css">
-</head>
-
-<body>
-    <div class="wrapper">
-        <div class="content">
-            <header class="header header_dark">
-                <div class="container">
-                    <div class="row">
-                        <div class="header__col header__col_logo">
-                            <div class="header__logo">
-                                <img src="images/logo.png" alt="логотип">
-                            </div>
-                        </div>
-                        <div class="header__col header__col_menu">
-                            <input class="burger-menu__input" type="checkbox" id="burgerMenu">
-                            <label class='menu__icon burger-menu' for="burgerMenu">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                            </label>
-                            <div class="header__menu">
-                                <nav class='header-menu__body'>
-                                    <ul class='header-menu__list'>
-                                        <li class='header-menu__item'><a href='#' class='header-menu__link'>FAQ</a></li>
-                                        <li class='header-menu__item'><a href='#contacts' class='header-menu__link'>КОНТАКТЫ</a></li>
-                                        <li class='header-menu__item header-menu__item_mob'><a href='https://progenen.github.io/AutoProd/registration-page.html' class='header-menu__link'>профиль</a></li>
-                                    </ul>
-                                    <ul class="header-menu__info">
-                                        <li class="header-menu__info-item">
-                                            <a href="tel:89990000000" class="header-menu__info-link">89990000000</a>
-                                        </li>
-                                        <li class="header-menu__info-item">
-                                            <a href="mailto:1@m.ru" class="header-menu__info-link">1@m.ru</a>
-                                        </li>
-                                    </ul>
-                                </nav>
-                            </div>
-                            <div class="header__menu-bg"></div>
-                        </div>
-                        <div class="header__col header__col_enter">
-                            <a href="https://progenen.github.io/AutoProd/registration-page.html" class="header__enter">
-                                <svg class="header__enter-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M10 10.625C9.0111 10.625 8.0444 10.3318 7.22215 9.78235C6.39991 9.23294 5.75904 8.45205 5.3806 7.53842C5.00217 6.62479 4.90315 5.61946 5.09608 4.64955C5.289 3.67965 5.76521 2.78873 6.46447 2.08947C7.16373 1.39021 8.05465 0.914002 9.02455 0.721076C9.99446 0.52815 10.9998 0.627166 11.9134 1.0056C12.8271 1.38404 13.6079 2.02491 14.1574 2.84715C14.7068 3.6694 15 4.6361 15 5.625C15 6.95109 14.4732 8.22285 13.5355 9.16054C12.5979 10.0982 11.3261 10.625 10 10.625ZM10 1.875C9.25832 1.875 8.5333 2.09494 7.91661 2.50699C7.29993 2.91905 6.81928 3.50472 6.53545 4.18994C6.25163 4.87516 6.17736 5.62916 6.32206 6.35659C6.46675 7.08402 6.8239 7.75221 7.34835 8.27665C7.8728 8.8011 8.54098 9.15825 9.26841 9.30295C9.99584 9.44764 10.7498 9.37338 11.4351 9.08955C12.1203 8.80572 12.706 8.32508 13.118 7.70839C13.5301 7.09171 13.75 6.36668 13.75 5.625C13.75 4.63044 13.3549 3.67661 12.6517 2.97335C11.9484 2.27009 10.9946 1.875 10 1.875Z"/>
-                                    <path d="M14.375 19.375H5.625C4.7962 19.375 4.00134 19.0458 3.41529 18.4597C2.82924 17.8737 2.5 17.0788 2.5 16.25V13.75C2.50002 13.6415 2.52826 13.5349 2.58196 13.4407C2.63566 13.3465 2.71295 13.2678 2.80625 13.2125L5.93125 11.3375C6.07224 11.2738 6.23186 11.2646 6.37922 11.3118C6.52658 11.359 6.6512 11.4591 6.72896 11.5929C6.80673 11.7267 6.83212 11.8845 6.80022 12.0359C6.76831 12.1873 6.68138 12.3215 6.55625 12.4125L3.75 14.1062V16.25C3.75 16.7473 3.94754 17.2242 4.29917 17.5758C4.65081 17.9275 5.12772 18.125 5.625 18.125H14.375C14.8723 18.125 15.3492 17.9275 15.7008 17.5758C16.0525 17.2242 16.25 16.7473 16.25 16.25V14.1062L13.4312 12.4125C13.3516 12.3765 13.2803 12.3241 13.2221 12.2589C13.1639 12.1936 13.1201 12.1168 13.0934 12.0335C13.0667 11.9502 13.0579 11.8623 13.0673 11.7754C13.0768 11.6884 13.1044 11.6044 13.1483 11.5288C13.1923 11.4532 13.2516 11.3877 13.3225 11.3365C13.3934 11.2852 13.4742 11.2494 13.5598 11.2314C13.6453 11.2134 13.7337 11.2135 13.8193 11.2318C13.9048 11.25 13.9855 11.2861 14.0562 11.3375L17.1812 13.2125C17.2769 13.2662 17.3567 13.3442 17.4126 13.4386C17.4686 13.5329 17.4987 13.6403 17.5 13.75V16.25C17.5 17.0788 17.1708 17.8737 16.5847 18.4597C15.9987 19.0458 15.2038 19.375 14.375 19.375Z"/>
-                                </svg>
-                                вход
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </header>
-;`
-
 <section class="rep-report">
     <div class="container">
         <div class="row">
@@ -206,8 +144,7 @@
             <div class="alert">
                 <p class="alert__text">
                     Будьте осторожны, если автомобилем владело юридическое лицо. Транспортное средство могло
-                    использоваться в таскопарке или каршеринге. Владельцы обычно специально делают дубликат ПТС,
-                    чтобы
+                    использоваться в таскопарке или каршеринге. Владельцы обычно специально делают дубликат ПТС, чтобы
                     скрыть из истории владения юридических лиц.
                 </p>
             </div>
@@ -223,8 +160,7 @@
         <div class="row">
             <div class="alert">
                 <p class="alert__text">
-                    Запрет регистрационных действий на машину накладывается, если у автовладельца есть
-                    неоплаченные
+                    Запрет регистрационных действий на машину накладывается, если у автовладельца есть неоплаченные
                     штрафы и налоги, либо если имущество стало предметом спора.
                 </p>
             </div>
@@ -240,10 +176,8 @@
         <div class="row">
             <div class="alert">
                 <p class="alert__text">
-                    Покупка разыскиваемого автомобиля грозит тем, что его отберут в ГИБДД при регистрации, и
-                    пока будет
-                    идти следствие, а это может затянуться на долгий срок, автомобиль будет стоять на
-                    штрафплощадке.
+                    Покупка разыскиваемого автомобиля грозит тем, что его отберут в ГИБДД при регистрации, и пока будет
+                    идти следствие, а это может затянуться на долгий срок, автомобиль будет стоять на штрафплощадке.
                 </p>
             </div>
         </div>
@@ -345,11 +279,9 @@
         <div class="row">
             <div class="alert">
                 <p class="alert__text">
-                    В данном блоке отображаются данные о прохождении техосмотра на основании данных
-                    диагностических карт
+                    В данном блоке отображаются данные о прохождении техосмотра на основании данных диагностических карт
                     ТС.
-                    Срок прохождения технического осмотра для автомобилей категории «B»: — первые четыре года —
-                    не
+                    Срок прохождения технического осмотра для автомобилей категории «B»: — первые четыре года — не
                     требуется; — возраст от 4 до 10 лет — каждые 2 года; — старше 10 лет — ежегодно.
                 </p>
             </div>
@@ -484,8 +416,7 @@
         <div class="row">
             <div class="alert">
                 <p class="alert__text">
-                    Если заложенное авто продадут без согласия банка, сделку могут признать недействительной, а
-                    машину —
+                    Если заложенное авто продадут без согласия банка, сделку могут признать недействительной, а машину —
                     забрать. Перед покупкой убедитесь, что продавец погасил долг.
                 </p>
             </div>
@@ -503,12 +434,9 @@
         <div class="row">
             <div class="alert">
                 <p class="alert__text">
-                    Покупка авто, которое находится в лизинге, сопровождается рисками. Например, на ТС могут
-                    быть
-                    ограничения ГИБДД. Купив такое авто, новый владелец не сможет зарегистрировать т/с в
-                    автоинспекции.
-                    Лизинговая компания может изъять автомобиль через суд, если бывший владелец перестанет
-                    выплачивать
+                    Покупка авто, которое находится в лизинге, сопровождается рисками. Например, на ТС могут быть
+                    ограничения ГИБДД. Купив такое авто, новый владелец не сможет зарегистрировать т/с в автоинспекции.
+                    Лизинговая компания может изъять автомобиль через суд, если бывший владелец перестанет выплачивать
                     лизинговые взносы.
                 </p>
             </div>
@@ -578,7 +506,7 @@
                             Один отчет за 74 ₽
                         </div>
                     </div>
-                </label>
+                    </ж>
             </div>
             <div class="rep-buy__agree subscr__agree">
                 <div class="rep-buy__agree-wrapper subscr__agree-wrapper">
@@ -587,8 +515,7 @@
                             id="subCheck1"></input>
                         <span class="rep-buy__agree-check-custom subscr__agree-check-custom check__custom"></span>
                     </div>
-                    <label for="subCheck1">Соглашаюсь с Политикой конфиденциальности и обработкой
-                        персональных
+                    <label for="subCheck1">Соглашаюсь с Политикой конфиденциальности и обработкой персональных
                         данных</label>
                 </div>
                 <div class="rep-buy__agree-wrapper subscr__agree-wrapper">
@@ -597,10 +524,8 @@
                             id="subCheck2"></input>
                         <span class="rep-buy__agree-check-custom subscr__agree-check-custom check__custom"></span>
                     </div>
-                    <label for="subCheck2">Соглашаюсь тарифами сервиса и условиями использования, ознакомлен
-                        с
-                        периодическими списаниями 690 рублей в неделю за 15 отчетов об автомобиле при
-                        оформлении
+                    <label for="subCheck2">Соглашаюсь тарифами сервиса и условиями использования, ознакомлен с
+                        периодическими списаниями 690 рублей в неделю за 15 отчетов об автомобиле при оформлении
                         подписки за 1 рубль на 1 день, далее 690 рублей в неделю</label>
                 </div>
             </div>
@@ -608,41 +533,4 @@
         </form>
     </div>
 </section>
-<div class="rep-modal">
-    <div class="rep-modal__bg">
-        <div class="rep-modal__content">
-            <div class="container">
-                <h2 class="rep-modal__title title title_bold title_dark">Купить отчет для госномера: А000АА999?</h2>
-                <div class="rep-modal__btns">
-                    <button class="rep-modal__btn btn btn_dark">
-                        ПОЛУЧИТЬ ОТЧЕТ
-                    </button>
-                    <button class="rep-modal__btn btn btn_white">
-                        ПОСМОТРЕТЬ ПРИМЕР ОТЧЕТА
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
-</div>
-<footer class="footer">
-    <div class="container">
-        <div class="row">
-            <nav class="footer__menu">
-                <ul class='footer-menu__list'>
-                    <li class='footer-menu__item'><a href='#' class='footer-menu__link'>Политика конфиденциальности</a></li>
-                    <li class='footer-menu__item'><a href='#' class='footer-menu__link'>Обработка персональных данных</a></li>
-                    <li class='footer-menu__item'><a href='#' class='footer-menu__link'>Оферта</a></li>
-                    <li class='footer-menu__item'><a href='#' class='footer-menu__link'>Тарифы</a></li>
-                    <li class='footer-menu__item'><a href='#' class='footer-menu__link'>Отменить подписку</a></li>
-                </ul>
-            </nav>
-        </div>
-    </div>
-</footer>
-</div>
-<script src="JS/bundle.js"></script>
-</body>
-
-</html>
